--- a/latte_new_journel_/reference.bib
+++ b/latte_new_journel_/reference.bib
@@ -7,7 +7,7 @@
   archivePrefix = {arXiv},
   primaryClass = {cs.LG},
   url = {https://arxiv.org/abs/1412.6980},
-  note = {arXiv:1412.6980 [cs.LG]. Accessed 3 Oct 2025}
+  note = {Accessed 3 Oct 2025}
 }
 
 @inproceedings{johnson2016perceptual,
