--- a/latte_new_journel_/reference.bib
+++ b/latte_new_journel_/reference.bib
@@ -34,11 +34,14 @@
 }
 
 @article{lin2022esmfold,
-  author = {Lin, Zeming and Akin, Halil and Rao, Roshan and others},
-  title = {ESMFold: End-to-end single-sequence protein structure prediction},
-  journal = {bioRxiv},
-  year = {2022},
-  doi = {10.1101/2022.07.20.500902}
+  author  = {Lin, Zeming and Akin, Halil and Rao, Roshan and others},
+  title   = {Evolutionary-scale prediction of atomic-level protein structure with a language model},
+  journal = {Science},
+  year    = {2023},
+  volume  = {379},
+  number  = {6637},
+  pages   = {1123--1130},
+  doi     = {10.1126/science.ade2574}
 }
 
 @article{maaten2008visualizing,
@@ -51,14 +54,15 @@
 }
 
 @article{lambert2019fpbase,
-  author = {Lambert, T. J.},
-  title = {FPbase: a community-editable fluorescent protein database},
+  author  = {Lambert, Talley J.},
+  title   = {FPbase: a community-editable fluorescent protein database},
   journal = {Nature Methods},
-  year = {2019},
-  volume = {16},
-  number = {3},
-  pages = {239--244},
-  doi = {10.1038/s41592-019-0352-8}
+  year    = {2019},
+  volume  = {16},
+  number  = {4},
+  pages   = {277--278},
+  doi     = {10.1038/s41592-019-0352-8},
+  url     = {https://www.nature.com/articles/s41592-019-0352-8}
 }
 
 @article{jumper2021highly,
@@ -201,7 +205,7 @@
   edition   = {2},
   publisher = {Springer},
   address   = {Cham},
-  doi       = {10.1007/978-3-030-54256-6}
+  doi       = {10.1007/978-3-030-39357-1}
 }
 
 @article{Camacho2009,
@@ -234,10 +238,10 @@
 @inproceedings{vaswani2017attention,
   author    = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, {\L}ukasz and Polosukhin, Illia},
   title     = {Attention Is All You Need},
-  booktitle = {Proceedings of the 31st International Conference on Neural Information Processing Systems (NIPS)},
+  booktitle = {Advances in Neural Information Processing Systems},
   year      = {2017},
-  pages     = {5998--6008},
-  note      = {arXiv:1706.03762}
+  volume    = {30},
+  pages     = {5998--6008}
 }
 
 
@@ -292,4 +296,26 @@
   number  = {1},
   pages   = {117--128},
   doi     = {10.1109/TPAMI.2010.57}
+}
+
+@article{Steinegger2017MMseqs2,
+  author  = {Steinegger, Martin and S{\"o}ding, Johannes},
+  title   = {{MMseqs2} enables sensitive protein sequence searching for the analysis of massive data sets},
+  journal = {Nature Biotechnology},
+  year    = {2017},
+  volume  = {35},
+  number  = {11},
+  pages   = {1026--1028},
+  doi     = {10.1038/nbt.3988}
+}
+
+@article{Steinegger2018Linclust,
+  author  = {Steinegger, Martin and S{\"o}ding, Johannes},
+  title   = {Clustering huge protein sequence sets in linear time},
+  journal = {Nature Communications},
+  year    = {2018},
+  volume  = {9},
+  number  = {1},
+  pages   = {2542},
+  doi     = {10.1038/s41467-018-04964-5}
 }
