--- a/latte_new_journel_/reference.bib
+++ b/latte_new_journel_/reference.bib
@@ -319,3 +319,12 @@
   pages   = {2542},
   doi     = {10.1038/s41467-018-04964-5}
 }
+
+@misc{ncbi_refseq_stats,
+  author       = {{NCBI Resource Coordinators}},
+  title        = {NCBI RefSeq Statistics},
+  publisher    = {National Center for Biotechnology Information},
+  year         = {2025},
+  note         = {Accessed Nov 2025},
+  howpublished = {\url{https://www.ncbi.nlm.nih.gov/refseq/statistics/}}
+}
